remove my build directory